# zljs

./: 100Dumbbell_curls.py  100curl.py  1eyes.py  1main.py  1shuaidao.py  1squats.py  CMakeLists.txt  Dumbbell_squats.py  README.md  aarch64-qt.conf  jkjk2.py  jkjk2.ui  js_sd.py  js_sd.ui  js_tj.py  js_tj.ui  js_wj.py  js_wj.ui  js_xs.py  js_xs.ui  jsnu2.py  jsnu2.ui  kf_jb.py  kf_jb.ui  kf_sb.py  kf_sb.ui  kf_xz.py  kf_xz.ui  kfnu2.py  kfnu2.ui  main_nu.py  main_nu.ui  main_ui_run.py  space.py  text.py  text.qrc  text10.qrc  text10_rc.py  text11.qrc  text11_rc.py  (+16 more)
