cmake_minimum_required(VERSION 3.5)
project(SimpleQtBoxApp VERSION 0.1 LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5 COMPONENTS Widgets REQUIRED)
add_executable(SimpleQtBoxApp main.cpp)
target_link_libraries(SimpleQtBoxApp Qt5::Widgets)
